@@ -1,3 +1,9 @@
+2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/const.py:
+	* gaupol/util.py:
+	Minor changes.
+
 2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/util.py (is_method):
